fix collapsed margin using overflow:auto

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -93,6 +93,7 @@ main {
 	clear: both;
 	width: 960px;
 	margin: 100px auto 85px auto;
+	overflow: auto;
 }
 
 .content {
